# crow_econometrics

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yaml  publish-to-test-pypi.yaml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/crow_econometrics/: __init__.py  models.py
tests/: test_crow_econometrics.py
