[tool.poetry]
name = "crow_econometrics"
version = "0.1.0"
description = "Econometrics for All!"
authors = ["ir. R. Jaspers"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
